AUTOMAKE_OPTIONS=foreign
bin_PROGRAMS=Server
Server_SOURCES=\
            Server.cc Server.h \
            Channel.cc Channel.h \
            Buffer.h Msg.h\
            EventLoop.cc EventLoop.h \
            Epoller.cc Epoller.h\
            TcpConnection.cc TcpConnection.h\
            Log.cc Log.h\
            CallBack.h \
            Acceptor.h Acceptor.cc\
			Thread.h Thread.cc\
			Mutex.h\
			Condition.h\
			EventLoopThread.cc EventLoopThread.h\
			EventLoopThreadPool.cc EventLoopThreadPool.h
